# Butterscotch

./: .gitignore  CMakeLists.txt
assets/: UndertaleModToolRepackTexturesTo3DS.csx  bundle.py  convert.sh
gl2citro3d/: CMakeLists.txt  Makefile  README.md
gl2citro3d/cmake/: DevkitArm3DS.cmake
gl2citro3d/examples/01_triangle/: CMakeLists.txt  Makefile  main.c
gl2citro3d/examples/02_textured_quad/: CMakeLists.txt  Makefile  main.c
gl2citro3d/examples/03_rotating_cube/: CMakeLists.txt  Makefile  main.c
gl2citro3d/src/: CMakeLists.txt  Makefile  gl2citro3d.c
src/: audio_system.h  binary_reader.c  binary_reader.h  binary_utils.h  collision.h  data_win.c  data_win.h  data_win_print.c  file_system.h  ini.h  input_recording.h  instance.c  instance.h  json_reader.h  json_writer.h  matrix_math.h  noop_file_system.c  noop_file_system.h  real_type.h  renderer.h  runner.c  runner.h  runner_keyboard.c  runner_keyboard.h  rvalue.h  text_utils.h  utils.h  vm.c  vm.h  vm_builtins.c  vm_builtins.h
src/3ds/: 3ds_file_system.c  citro3d_renderer.c  citro3d_renderer.h  decode_thread.c  decode_thread.h  main.c  render_thread.c  render_thread.h  sdl12_renderer.c  sdl12_renderer.h  sdl_audio_system.h
src/3ds/c3d/: c3d_batch.c  c3d_batch.h  c3d_constants.h  c3d_draw.c  c3d_draw.h  c3d_init.c  c3d_init.h  c3d_texture.c  c3d_texture.h  c3d_texture_t3b.c  c3d_texture_t3b.h  c3d_utils.c  c3d_utils.h
src/3ds/shaders/: shader.v.pica
src/glfw/: gl_renderer.c  glfw_file_system.c  main.c
src/ps2/: gs_renderer.c  main.c
src/sdl12/: main.c  sdl12_audio_system.c  sdl12_audio_system.h  sdl12_renderer.c  sdl12_renderer.h
src/sdl2/: glfw_file_system.c  main.c  sdl_audio_system.c  sdl_audio_system.h  sdl_renderer.h
src/wiiu/: cafe_file_system.h  main.c  sdl_audio_system.c  sdl_renderer.c
